{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 48,
  "lineage": "dff5d1fb-ff1d-799a-87c8-8de429bc02e0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ips",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.30.125.123",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-06-24T15:02:10.749-07:00",
            "id": "projects/infraproject-390421/regions/us-central1/addresses/static-ip-0",
            "name": "static-ip-0",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "infraproject-390421",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/regions/us-central1/addresses/static-ip-0"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "34.172.48.84",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-06-24T15:02:10.605-07:00",
            "id": "projects/infraproject-390421/regions/us-central1/addresses/static-ip-1",
            "name": "static-ip-1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "infraproject-390421",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/regions/us-central1/addresses/static-ip-1"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address": "34.122.4.114",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-06-24T15:02:10.581-07:00",
            "id": "projects/infraproject-390421/regions/us-central1/addresses/static-ip-2",
            "name": "static-ip-2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "infraproject-390421",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/regions/us-central1/addresses/static-ip-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/zones/us-central1-c/instanceGroups/my-vm-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-06-24T15:03:11.939-07:00",
            "enable_cdn": false,
            "fingerprint": "lVrC18iFB1E=",
            "generated_id": 918417796608218864,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/httpHealthChecks/my-health-check"
            ],
            "id": "projects/infraproject-390421/global/backendServices/my-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "my-backend-service",
            "port_name": "http",
            "project": "infraproject-390421",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/backendServices/my-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.static_ips",
            "google_compute_http_health_check.health_check",
            "google_compute_instance.vms",
            "google_compute_instance_group.vm_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-24T15:02:09.898-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infraproject-390421/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/networks/default",
            "priority": 1000,
            "project": "infraproject-390421",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/firewalls/allow-http",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "allow-http"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-24T15:02:09.837-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infraproject-390421/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/networks/default",
            "priority": 1000,
            "project": "infraproject-390421",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/firewalls/allow-https",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "allow-https"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-24T15:02:09.715-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infraproject-390421/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/networks/default",
            "priority": 1000,
            "project": "infraproject-390421",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/firewalls/allow-ssh",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "allow-ssh"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/infraproject-390421/global/forwardingRules/my-forwarding-rule",
            "ip_address": "34.102.254.243",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "my-forwarding-rule",
            "port_range": "80-80",
            "project": "infraproject-390421",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/forwardingRules/my-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/targetHttpProxies/my-http-proxy"
          },
          "dependencies": [
            "google_compute_address.static_ips",
            "google_compute_backend_service.backend_service",
            "google_compute_http_health_check.health_check",
            "google_compute_instance.vms",
            "google_compute_instance_group.vm_group",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230616",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/zones/us-central1-c/disks/master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infraproject-390421/zones/us-central1-c/instances/master",
            "instance_id": "4159968355227982109",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata": {
              "startup-script": "sudo apt-get update\r\n# Install Docker\r\nsudo wget https://raw.githubusercontent.com/lerndevops/labs/master/scripts/installDocker.sh -P /tmp\r\nsudo chmod 755 /tmp/installDocker.sh\r\nsudo bash /tmp/installDocker.sh\r\nsudo systemctl restart docker.service\r\n\r\n# Install CRI-Docker\r\nsudo wget https://raw.githubusercontent.com/lerndevops/labs/master/scripts/installCRIDockerd.sh -P /tmp\r\nsudo chmod 755 /tmp/installCRIDockerd.sh\r\nsudo bash /tmp/installCRID [...]
            },
            "metadata_fingerprint": "URrX2cIN3bk=",
            "name": "master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.30.125.123",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/networks/default",
                "network_ip": "10.128.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/regions/us-central1/subnetworks/default",
                "subnetwork_project": "infraproject-390421"
              }
            ],
            "project": "infraproject-390421",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/zones/us-central1-c/instances/master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_address.static_ips"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230616",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/zones/us-central1-c/disks/worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infraproject-390421/zones/us-central1-c/instances/worker-1",
            "instance_id": "6329091611833325853",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata": {
              "startup-script": "sudo apt-get update\r\n# Install Docker\r\nsudo wget https://raw.githubusercontent.com/lerndevops/labs/master/scripts/installDocker.sh -P /tmp\r\nsudo chmod 755 /tmp/installDocker.sh\r\nsudo bash /tmp/installDocker.sh\r\nsudo systemctl restart docker.service\r\n\r\n# Install CRI-Docker\r\nsudo wget https://raw.githubusercontent.com/lerndevops/labs/master/scripts/installCRIDockerd.sh -P /tmp\r\nsudo chmod 755 /tmp/installCRIDockerd.sh\r\nsudo bash /tmp/installCRID [...]
            },
            "metadata_fingerprint": "URrX2cIN3bk=",
            "name": "worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.172.48.84",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/networks/default",
                "network_ip": "10.128.0.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/regions/us-central1/subnetworks/default",
                "subnetwork_project": "infraproject-390421"
              }
            ],
            "project": "infraproject-390421",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/zones/us-central1-c/instances/worker-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_address.static_ips"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230616",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/zones/us-central1-c/disks/worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infraproject-390421/zones/us-central1-c/instances/worker-2",
            "instance_id": "3582216656014465309",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata": {
              "startup-script": "sudo apt-get update\r\n# Install Docker\r\nsudo wget https://raw.githubusercontent.com/lerndevops/labs/master/scripts/installDocker.sh -P /tmp\r\nsudo chmod 755 /tmp/installDocker.sh\r\nsudo bash /tmp/installDocker.sh\r\nsudo systemctl restart docker.service\r\n\r\n# Install CRI-Docker\r\nsudo wget https://raw.githubusercontent.com/lerndevops/labs/master/scripts/installCRIDockerd.sh -P /tmp\r\nsudo chmod 755 /tmp/installCRIDockerd.sh\r\nsudo bash /tmp/installCRID [...]
            },
            "metadata_fingerprint": "URrX2cIN3bk=",
            "name": "worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.122.4.114",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/networks/default",
                "network_ip": "10.128.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/regions/us-central1/subnetworks/default",
                "subnetwork_project": "infraproject-390421"
              }
            ],
            "project": "infraproject-390421",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/zones/us-central1-c/instances/worker-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_address.static_ips"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-24T15:03:46.725-07:00",
            "id": "projects/infraproject-390421/global/targetHttpProxies/my-http-proxy",
            "name": "my-http-proxy",
            "project": "infraproject-390421",
            "proxy_bind": false,
            "proxy_id": 5105638957450450605,
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/targetHttpProxies/my-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/urlMaps/my-url-map"
          },
          "dependencies": [
            "google_compute_address.static_ips",
            "google_compute_backend_service.backend_service",
            "google_compute_http_health_check.health_check",
            "google_compute_instance.vms",
            "google_compute_instance_group.vm_group",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-24T15:03:34.495-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/backendServices/my-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "JLpVr42hrJc=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/infraproject-390421/global/urlMaps/my-url-map",
            "map_id": 1281195121252685529,
            "name": "my-url-map",
            "path_matcher": [],
            "project": "infraproject-390421",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infraproject-390421/global/urlMaps/my-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.static_ips",
            "google_compute_backend_service.backend_service",
            "google_compute_http_health_check.health_check",
            "google_compute_instance.vms",
            "google_compute_instance_group.vm_group"
          ]
        }
      ]
    }
  ]
}